@@ -4,26 +4,20 @@
  */
 package com.jyuzawa.onnxruntime;
 
-import static jdk.incubator.foreign.CLinker.C_CHAR;
-import static jdk.incubator.foreign.CLinker.C_LONG_LONG;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
-import static jdk.incubator.foreign.CLinker.toCString;
+import static java.lang.foreign.ValueLayout.ADDRESS;
+import static java.lang.foreign.ValueLayout.JAVA_CHAR;
+import static java.lang.foreign.ValueLayout.JAVA_LONG;
 
-import java.nio.charset.Charset;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Stream;
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
 
 final class OnnxTensorStringImpl extends OnnxTensorImpl {
-
-    private static final Charset UTF8 = Charset.forName("utf-8");
 
     private final String[] buffer;
 
@@ -44,22 +38,16 @@ final class OnnxTensorStringImpl extends OnnxTensorImpl {
 
     @Override
     public MemoryAddress toNative(
-            ApiImpl api,
-            MemoryAddress ortAllocator,
-            MemoryAddress memoryInfo,
-            ResourceScope scope,
-            SegmentAllocator allocator) {
+            ApiImpl api, MemoryAddress ortAllocator, MemoryAddress memoryInfo, MemorySession allocator) {
 
         int numOutputs = buffer.length;
-        Addressable[] stringsAddresses = new Addressable[numOutputs];
+        MemorySegment stringArray = allocator.allocateArray(ADDRESS, numOutputs);
         for (int i = 0; i < numOutputs; i++) {
-            stringsAddresses[i] = toCString(buffer[i], scope);
+            stringArray.setAtIndex(ADDRESS, i, allocator.allocateUtf8String(buffer[i]));
         }
-        MemorySegment stringArray = allocator.allocateArray(C_POINTER, stringsAddresses);
-
         List<Long> shape = tensorInfo.getShape();
         int shapeSize = shape.size();
-        MemorySegment shapeData = allocator.allocateArray(C_LONG_LONG, shape(shape));
+        MemorySegment shapeData = allocator.allocateArray(JAVA_LONG, shape(shape));
         MemoryAddress tensor = api.create(
                 allocator,
                 out -> api.CreateTensorAsOrtValue.apply(
@@ -69,29 +57,24 @@ final class OnnxTensorStringImpl extends OnnxTensorImpl {
                         tensorInfo.getType().getNumber(),
                         out));
         api.checkStatus(api.FillStringTensor.apply(tensor, stringArray.address(), numOutputs));
-        scope.addCloseAction(() -> {
+        allocator.addCloseAction(() -> {
             api.ReleaseValue.apply(tensor);
         });
         return tensor;
     }
 
     @Override
-    public void fromNative(
-            ApiImpl api,
-            MemoryAddress ortAllocator,
-            MemoryAddress address,
-            ResourceScope scope,
-            SegmentAllocator allocator) {
+    public void fromNative(ApiImpl api, MemoryAddress ortAllocator, MemoryAddress address, MemorySession allocator) {
         int numOutputs = buffer.length;
         for (int i = 0; i < numOutputs; i++) {
             final long index = i;
             long length =
                     api.extractLong(allocator, out -> api.GetStringTensorElementLength.apply(address, index, out));
-            MemorySegment output = allocator.allocateArray(C_CHAR, length);
+            MemorySegment output = allocator.allocateArray(JAVA_CHAR, length);
             api.checkStatus(api.GetStringTensorElement.apply(address, length, index, output.address()));
-            buffer[i] = new String(output.toByteArray(), UTF8);
+            buffer[i] = output.getUtf8String(0);
         }
-        scope.addCloseAction(() -> {
+        allocator.addCloseAction(() -> {
             api.ReleaseValue.apply(address);
         });
     }
