@@ -4,35 +4,24 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
-import static jdk.incubator.foreign.CLinker.*;
+import static java.lang.foreign.ValueLayout.*;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 public interface OrtThreadWorkerFn {
 
-    void apply(jdk.incubator.foreign.MemoryAddress x0);
+    void apply(java.lang.foreign.MemoryAddress ort_worker_fn_param);
 
-    static MemoryAddress allocate(OrtThreadWorkerFn fi) {
-        return RuntimeHelper.upcallStub(
-                OrtThreadWorkerFn.class,
-                fi,
-                constants$0.OrtThreadWorkerFn$FUNC,
-                "(Ljdk/incubator/foreign/MemoryAddress;)V");
+    static MemorySegment allocate(OrtThreadWorkerFn fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(OrtThreadWorkerFn.class, fi, constants$0.OrtThreadWorkerFn$FUNC, session);
     }
 
-    static MemoryAddress allocate(OrtThreadWorkerFn fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(
-                OrtThreadWorkerFn.class,
-                fi,
-                constants$0.OrtThreadWorkerFn$FUNC,
-                "(Ljdk/incubator/foreign/MemoryAddress;)V",
-                scope);
-    }
-
-    static OrtThreadWorkerFn ofAddress(MemoryAddress addr) {
-        return (jdk.incubator.foreign.MemoryAddress x0) -> {
+    static OrtThreadWorkerFn ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (java.lang.foreign.MemoryAddress _ort_worker_fn_param) -> {
             try {
-                constants$0.OrtThreadWorkerFn$MH.invokeExact((Addressable) addr, x0);
+                constants$0.OrtThreadWorkerFn$MH.invokeExact(
+                        (Addressable) symbol, (java.lang.foreign.Addressable) _ort_worker_fn_param);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
